--- a/gameserver.ini
+++ b/gameserver.ini
@@ -5,7 +5,7 @@
 // serverViewBase: Base view distance of players. Warning: high values may cause lag
 // leaderboardUpdateClient: How often leaderboard data is sent to the client (1 tick = 50 milliseconds)
 serverMaxConnections = 64
-serverTitle = Tommy's Ogar
+serverTitle = Ogario
 serverPlaceholder = Nick
 serverPort = 80
 serverGamemode = 0
